feat: update plugin metadata and add plugins, MCPs, and agents

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .DS_Store
 *.log
 node_modules/
+
+# Claude Code local settings (user-specific, auto-generated)
+.claude/settings.local.json
+
+# Windows artifacts
+nul
